--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -62,11 +62,7 @@
       "restart": "Restart",
       "undo": "Undo"
     },
-    "selection": {
-      "selected-value": "Selected Value",
-      "path-length": "{{length}} of up to {{max}} numbers selected",
-      "invalid": "Invalid Selection"
-    },
+    "selected-value": "Selected Value",
     "objective": {
       "objectives": "Objectives",
       "pending": "Pending Objective",
@@ -81,11 +77,7 @@
       "label": "Row {{row, zero-indicing}} / Column {{column, zero-indicing}}"
     },
     "edges": {
-      "label": "{{operation}} between row {{n1.row, zero-indicing}} / column {{n1.column, zero-indicing}} and row {{n2.row, zero-indicing}} / column {{n2.column, zero-indicing}}",
-      "used-by-hint_ordinal_one": "Hint: Used by {{count}}st objective",
-      "used-by-hint_ordinal_two": "Hint: Used by {{count}}nd objective",
-      "used-by-hint_ordinal_few": "Hint: Used by {{count}}rd objective",
-      "used-by-hint_ordinal_other": "Hint: Used by {{count}}th objective"
+      "label": "{{operation}} between row {{n1.row, zero-indicing}} / column {{n1.column, zero-indicing}} and row {{n2.row, zero-indicing}} / column {{n2.column, zero-indicing}}"
     },
     "operations": {
       "addition": "Addition",
@@ -111,7 +103,12 @@
     "hints": {
       "title": "Get a Hint",
       "statistics-warning": "This level will not count towards your statistics if solved with a hint.",
-      "button": "Get a hint for the active objective"
+      "button": "Get a hint for the active objective",
+      "selection-length-hint": "Hint: {{length}} of {{max}} numbers selected",
+      "edge-hint_ordinal_one": "Hint: Used by {{count}}st objective",
+      "edge-hint_ordinal_two": "Hint: Used by {{count}}nd objective",
+      "edge-hint_ordinal_few": "Hint: Used by {{count}}rd objective",
+      "edge-hint_ordinal_other": "Hint: Used by {{count}}th objective"
     },
     "share": {
       "title": "Share Level",
