--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -15,8 +15,8 @@
   "features": {
     "stats": {
       "games-played": "Games played",
-      "current-streak": "Current Streak",
-      "max-streak": "Max Streak",
+      "current-streak": "Current Daily Streak",
+      "max-streak": "Max Daily Streak",
       "perfect-games": "Perfect Games",
       "update": {
         "plus-one": "+1",
